--- a/newton.html
+++ b/newton.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Sir Isaac Ñuton</h1>
+    <h1>Sir Isaac <span>Ñuton</span> Newton</h1>
     <p class="intro">Newton, Sir Isaac, the most splendid genius that has yet adorned human nature, and by universal consent placed at the head of mathematics and of science, was born on Christmas-day, O. S. 1642, at Woolsthorpe, in the parish of Colsterworth, in the
         county of Lincoln. When born he was so little that his mother used to say he might have been put into a quart mug, and so unlikely to live that two women who were sent to lady Pakenham's, at North Witham, for something for him, did not expect
         to find him alive at their return.</p>
