Estructura con GRID

--- a/newton.html
+++ b/newton.html
@@ -7,13 +7,19 @@
 </head>
 
 <body>
-    <h1>Sir Isaac <span>Ñuton</span> Newton</h1>
-    <p class="intro">Newton, Sir Isaac, the most splendid genius that has yet adorned human nature, and by universal consent placed at the head of mathematics and of science, was born on Christmas-day, O. S. 1642, at Woolsthorpe, in the parish of Colsterworth, in the
-        county of Lincoln. When born he was so little that his mother used to say he might have been put into a quart mug, and so unlikely to live that two women who were sent to lady Pakenham's, at North Witham, for something for him, did not expect
-        to find him alive at their return.</p>
-    <p>He was born near three months after the death of his father, who was descended from the eldest branch of the family of sir John Newton, bart. and was lord of the manor of Woolsthorpe. The family came originally from Newton, in the county of Lancaster,
-        from which, probably, they took their name. His mother was Hannah Ayscough, of an ancient and honourable family in the county of Lincoln. She was married a second time to the rev. Barnabas Smith, rector of North Witham, a rich old bachelor, and
-        had by him a son and two daughters.</p>
+    <div id="descripcion">
+        <header>Sir Isaac Newton</header>
+        <aside>
+        </aside>
+        <article>
+            <p id="intro">Newton, Sir Isaac, the most splendid genius that has yet adorned human nature, and by universal consent placed at the head of mathematics and of science, was born on Christmas-day, O. S. 1642, at Woolsthorpe, in the parish of Colsterworth,
+                in the county of Lincoln. When born he was so little that his mother used to say he might have been put into a quart mug, and so unlikely to live that two women who were sent to lady Pakenham's, at North Witham, for something for him,
+                did not expect to find him alive at their return.</p>
+
+            <p>He was born near three months after the death of his father, who was descended from the eldest branch of the family of sir John Newton, bart. and was lord of the manor of Woolsthorpe. The family came originally from Newton, in the county of
+                Lancaster, from which, probably, they took their name. His mother was Hannah Ayscough, of an ancient and honourable family in the county of Lincoln. She was married a second time to the rev. Barnabas Smith, rector of North Witham, a rich
+                old bachelor, and had by him a son and two daughters.</p>
+        </article>
 </body>
 
 </html>
